tests/invalid/global_variables/non_constant_init.rs
/*
fail: 1
*/

foo: int = 3;
bar: int = foo + 1;

main(): int {
    return bar;
}